client/src/styles/chat.css
.mainChat{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    height: 100vh;
    min-width: 180px;
    color: rgba(0,0,0,.87);
    background-color: #fff;
    text-align: left;
    padding-bottom: 0.75rem;
    padding-top: 0.75rem;
}

.messageInputDIV{
    display: flex;
    flex-direction: row;
    border-top: none; /*1px dashed #d1dbe4;*/
    text-align: left;
}

.messageInputDIV::after::before{
    box-sizing: border-box;
}

.messageInput{
    flex-grow: 1;
    border-top: 0px;
    flex-shrink: initial;
    max-width: 100%;
}

.messageListContainer{
    display: block;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    overflow: hidden;
    min-height: 1.25em;
    position: relative;
    color: rgba(0,0,0,.87);
    background-color: #fff;
}

.messageListScrollbar{
    display: block;
    overscroll-behavior-y: none;
    overflow-anchor: auto;
    touch-action: none;
    position: relative;
    height: 100%;
    overflow: auto !important;
    box-sizing: border-box;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0 1.2em 0 0.8em;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.messageListScrollbar::-webkit-scrollbar {
    display: none;
}

.messageIncoming{
    display: flex;
    flex-direction: row;
    border-top: black 1px solid;
    background-color: white;
    margin-bottom: 0px;
    padding: 20px;
    white-space: pre-wrap;
}

.messageOutgoing{
    display: flex;
    flex-direction: column;
    text-align: right;
    background-color: white;
    margin-bottom: 0px;
    padding: 20px;
    border-style: solid;
    border-image: linear-gradient(to right, white, #225633, white) 1;
    white-space: pre-wrap;
}

.messageAvatar{
    float: left; 
    width: 50px; 
    height: 50px; 
    margin-right: 10px;
    border-radius: 50%; 
}

.welcomeMessage{
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: white;
    margin-bottom: 0px;
    padding: 20px;
    white-space: pre-wrap;
    border: black 1px solid;
    border-radius: 15px;
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
}

.systemMessageInput{
    width: 100%;
    max-height: 300px;
    min-height: 200px;
    margin-bottom: 2rem;
}

.attachIcon{
    cursor: pointer;
    color: #6ea9d7;
}

.attachIcon:hover{
    color: red;
}

.attachIconMessage{
    color: #6ea9d7;
}

.attachCounter{
    background-color: transparent;
    font-weight: 900;
    font-size: 3rem;
    color: red;
    bottom: -0.35rem;
    right: -0.35rem;
}

.tooltipIcon{
    padding: 0px;
}

.thinking:after {
    overflow: hidden;
    display: inline-block;
    vertical-align: bottom;
    -webkit-animation: ellipsis steps(4, end) 900ms infinite;
    animation: ellipsis steps(4, end) 900ms infinite;
    content: "\2026";
    /* ascii code for the ellipsis character */
    width: 0px;
  }
  
  @keyframes ellipsis {
    to {
      width: 40px;
    }
  }
  
  @-webkit-keyframes ellipsis {
    to {
      width: 40px;
    }
  }

